fix: overflow de carrousel

--- a/app/src/globals/styles/globals.css
+++ b/app/src/globals/styles/globals.css
@@ -142,7 +142,7 @@ p{
   }
 }
 
-
-body{
-  overflow-x: hidden;
+main{
+  @apply overflow-x-hidden
 }
+
